force-app/main/default/objects/NBA_Rule__mdt/NBA_Rule__mdt.object-meta.xml
<CustomObject>
    <label>NBA Rule</label>
    <pluralLabel>NBA Rules</pluralLabel>
</CustomObject>