force-app/main/default/objects/NBA_Rule__mdt/fields/Action_Payload__c.field-meta.xml
<CustomField>
    <fullName>Action_Payload__c</fullName>
    <label>Action Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>