force-app/main/default/objects/NBA_Rule__mdt/fields/Action_Target__c.field-meta.xml
<CustomField>
    <fullName>Action_Target__c</fullName>
    <label>Action Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>