force-app/main/default/objects/NBA_Rule__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>